@@ -435,7 +435,7 @@ GL_CLAMP = 0x2900
 GL_REPEAT = 0x2901
 GL_CLIENT_PIXEL_STORE_BIT = 0x00000001
 GL_CLIENT_VERTEX_ARRAY_BIT = 0x00000002
-GL_CLIENT_ALL_ATTRIB_BITS = 0xffffffff
+GL_CLIENT_ALL_ATTRIB_BITS = -1 # 0xffffffff
 GL_POLYGON_OFFSET_FACTOR = 0x8038
 GL_POLYGON_OFFSET_UNITS = 0x2A00
 GL_POLYGON_OFFSET_POINT = 0x2A01
